--- a/po/wesnoth-aoi/zh_CN.po
+++ b/po/wesnoth-aoi/zh_CN.po
@@ -1,5 +1,5 @@
 # The Battle for Wesnoth - Simplified Chinese Translations
-# Copyright (C) 2005-2018 Wesnoth development team
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # CloudiDust <cloudidust@gmail.com>, 2010.
 # wind <everywherewind@gmail.com>, 2011.
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 18:29 UTC\n"
-"PO-Revision-Date: 2018-07-08 20:30+0800\n"
+"PO-Revision-Date: 2019-02-04 17:36+0800\n"
 "Last-Translator: CloudiDust <cloudidust@gmail.com>\n"
 "Language-Team: Wesnoth Simplified Chinese Team\n"
 "Language: zh_CN\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
-"X-Generator: Poedit 2.0.8\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:11
@@ -41,10 +41,8 @@ msgstr ""
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:20
-#, fuzzy
-#| msgid "(Novice level, 7 scenarios.)"
 msgid "(Rookie level, 7 scenarios.)"
-msgstr "（新手级别，7幕场景。）"
+msgstr "（菜鸟级别，7幕场景。）"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:22
@@ -281,6 +279,8 @@ msgid ""
 "me that they are safe, but if we should embark on a campaign then we will "
 "surely need them alongside us in the battles ahead."
 msgstr ""
+"阁下，我们的疗伤者全都没有上战场的经验。他们身处安全之地让我很是高兴，但若是"
+"要前去作战，那我们必然需要他们伴随我们一道出征。"
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:214
@@ -289,6 +289,8 @@ msgid ""
 "pleases me that they are safe, but if we should embark on a campaign then we "
 "will surely need them alongside us in the battles ahead."
 msgstr ""
+"阁下，我们的疗伤者全都没有上战场的经验。她们身处安全之地让我很是高兴，但若是"
+"要前去作战，那我们必然需要她们伴随我们一道出征。"
 
 #. [message]: race=elf
 #. the player has recruited some Shamans but has lost all them (or managed to level a Sorceress)
@@ -299,6 +301,8 @@ msgid ""
 "on a campaign then we will surely need them alongside us in the battles "
 "ahead."
 msgstr ""
+"阁下，我们存活的疗伤者全都没有上战场的经验。虽然提出让另一位疗伤者上战场冒险"
+"的建议让我很痛苦，但若是要前去作战，那我们必然需要他们伴随我们一道出征。"
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:229
@@ -308,6 +312,8 @@ msgid ""
 "should embark on a campaign then we will surely need them alongside us in "
 "the battles ahead."
 msgstr ""
+"阁下，我们存活的疗伤者全都没有上战场的经验。虽然提出让另一位疗伤者上战场冒险"
+"的建议让我很痛苦，但若是要前去作战，那我们必然需要她们伴随我们一道出征。"
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:244
@@ -583,7 +589,7 @@ msgid ""
 "There are no villages in this scenario — you must use healers instead. Use "
 "hit-and-run tactics to weaken enemy units who cannot heal themselves."
 msgstr ""
-"这个场景里没有村庄——你必须用治疗师代替。用打了就跑战术来削弱无法治疗自己的敌"
+"这幕场景里没有村庄——你必须用治疗师代替。用打了就跑战术来削弱无法治疗自己的敌"
 "方单位。"
 
 #. [message]: role=advisor
@@ -650,21 +656,15 @@ msgstr "（<b>咳血</b>）我会等着……和死去的同胞一起……"
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:222
-#, fuzzy
-#| msgid ""
-#| "The orcish chieftain finally fell, overcome by his wounds. The elves "
-#| "found themselves in a half-ruined camp littered with the bodies of both "
-#| "sides.There was no hale orc in sight, nor did any of the wounded beg "
-#| "mercy. The elves took no prisoners."
 msgid ""
 "The orcish chieftain finally fell, overcome by his wounds. The elves found "
 "themselves in a half-ruined camp littered with the bodies of both sides. "
 "There was no hale orc in sight, nor did any of the wounded beg mercy. The "
 "elves took no prisoners."
 msgstr ""
-"兽人酋长终于倒下了，被他全身的伤口所拖垮。精灵们发现自己身处一个已经成为半片"
-"废墟的营地，这里到处都是交战双方的尸体，视野中再没有强壮的兽人，也没有乞求宽"
-"恕的兽人。精灵们没有留下任何俘虏。"
+"兽人酋长终于倒下了，他是被全身的伤口所拖垮。精灵们发现自己身处一个已然有一半"
+"化为废墟的营地，到处都是交战双方的尸体，视野中再没有强壮的兽人，也没有乞求宽"
+"恕的兽人。精灵们不抓俘虏。"
 
 #. [message]: role=advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:239
@@ -702,10 +702,6 @@ msgstr ""
 
 #. [message]: role=advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:265
-#, fuzzy
-#| msgid ""
-#| "What about the loot lord? We found supplies worth over a hundred gold in "
-#| "the camp."
 msgid ""
 "What about the loot, lord? We found supplies worth over a hundred gold in "
 "the camp."
@@ -736,8 +732,6 @@ msgstr "留着北征时用吧。在这个贫瘠的郊区里几乎一无所有。
 
 #. [message]: role=advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:320
-#, fuzzy
-#| msgid "We can’t carry on Lord, the men are too tired. We have to fall back."
 msgid "We can’t carry on, lord, the men are too tired. We have to fall back."
 msgstr "我们不能继续往前走了，阁下，士兵们都太累了。我们必须后撤。"
 
@@ -784,8 +778,8 @@ msgid ""
 msgstr ""
 "黄昏时分，他们到达了一个山谷的入口，并在那里扎营。山谷几乎是一条直线，横穿了"
 "整片区域。而侦察兵警告道，这片地区充满了敌意，而前方的道路也被包裹在危险的黑"
-"暗中。那天晚上没有了歌声和音乐，绝大多数精灵都睡得不安心。有几个倒霉的精灵还"
-"要负责守夜。"
+"暗中。那天晚上没有了歌声和音乐，大多数精灵都睡得不安心。有几个倒霉的精灵还要"
+"负责守夜。"
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/04_Valley_of_Trolls.cfg:33
