--- a/po/wesnoth-l/zh_CN.po
+++ b/po/wesnoth-l/zh_CN.po
@@ -1,5 +1,5 @@
 # The Battle for Wesnoth - Simplified Chinese Translations
-# Copyright (C) 2005-2018 Wesnoth development team
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # CloudiDust <cloudidust@gmail.com>, 2011.
 # wind <everywherewind@gmail.com>, 2012.
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2018-07-08 20:43+0800\n"
+"PO-Revision-Date: 2019-02-07 16:16+0800\n"
 "Last-Translator: CloudiDust <cloudidust@gmail.com>\n"
 "Language-Team: Wesnoth Simplified Chinese Team\n"
 "Language: zh_CN\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
-"X-Generator: Poedit 2.0.8\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Liberty
 #: data/campaigns/Liberty/_main.cfg:10 data/campaigns/Liberty/_main.cfg:11
@@ -72,10 +72,8 @@ msgstr ""
 
 #. [campaign]: id=Liberty
 #: data/campaigns/Liberty/_main.cfg:28
-#, fuzzy
-#| msgid "(Intermediate level, 8 scenarios.)"
 msgid "(Novice level, 8 scenarios.)"
-msgstr "（中等级别，8幕场景。）"
+msgstr "（新手级别，8幕场景。）"
 
 #. [about]
 #: data/campaigns/Liberty/_main.cfg:31
@@ -115,8 +113,8 @@ msgid ""
 "dissatisfied with the King’s rule. Being preoccupied with the great wars, "
 "the King was unable to send adequate forces to protect the frontier."
 msgstr ""
-"在伽拉德二世国王执政时期，是个混乱时代，安努文省的边境城镇德尔文和达尔本越发"
-"不满国王的统治。由于全心准备和兽人大战，国王无法派出足够的军队去保护边境。"
+"伽拉德二世国王执政时期，是个混乱时代，安努文省的边境城镇德尔文和达尔本越发不"
+"满国王的统治。由于全心准备和兽人大战，国王无法派出足够的军队去保护边境。"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:26
@@ -527,21 +525,15 @@ msgstr "伽拉德是韦诺之王。统治我们的不是女王。"
 
 #. [message]: speaker=Tarwen
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:146
-#, fuzzy
-#| msgid ""
-#| "Insolent peasants, you will kneel before your betters! Asheviere is the "
-#| "queen of Wesnoth. The King fell three weeks ago at Abez. I shall not "
-#| "bandy words with you. Your magistrate will be coming with us, and we do "
-#| "not care if it is dead or alive."
 msgid ""
 "Insolent peasants, you will kneel before your betters! Asheviere is the "
 "Queen of Wesnoth. The King fell three weeks ago at Abez. I shall not bandy "
 "words with you. Your magistrate will be coming with us, and we do not care "
 "if it is dead or alive."
 msgstr ""
-"无礼的乡下人，你们应该跪在你们的上级面前！艾什薇尔是韦诺的女王。国王在三周前"
-"在雅碧滩驾崩了。你别跟我顶嘴。你们的治安官要跟我们走了，而且我们可不管他是死"
-"是活。"
+"无礼的泥腿子，你们理当跪在上等人面前！艾什薇尔已是韦诺的女王。国王在三周前在"
+"雅碧滩驾崩。我不会与你争辩。你们的治安官必须跟我们走，而我们可不在乎他是死是"
+"活。"
 
 #. [message]: speaker=Tarwen
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:180
@@ -617,16 +609,12 @@ msgstr "噢！不！我们没有时间了！他们的援军来了……"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:353
-#, fuzzy
-#| msgid ""
-#| "They would be remembered only traitors rightly put down by the Queen’s "
-#| "lances. And in the dark years to come, woe betide any who questioned it."
 msgid ""
 "They would be remembered only as traitors rightly put down by the Queen’s "
 "lances. And in the dark years to come, woe betide any who questioned it."
 msgstr ""
-"他们只会作为叛徒被记住，被女王的爪牙镇压。黑暗的年代就要来了，谁敢质疑谁就倒"
-"霉。"
+"他们将只是被当作被女王的正义之师镇压的叛徒而被记住。在即将到来的黑暗年代里，"
+"胆敢质疑这一点的人都会倒霉。"
 
 #. [scenario]: id=03_A_Strategy_of_Hope
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:4
@@ -641,18 +629,20 @@ msgid ""
 "sent ahead for the magistrate, Relana, to meet them in a secluded strath in "
 "the swamps."
 msgstr ""
+"由于担心女王的大军会在发现巡逻队覆灭后杀来，巴尔德拉斯和手下逃离了达尔本。他"
+"们前往德尔文，并派人预先通知治安官雷拉纳在沼泽中一块隐蔽的谷底见面。"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:22
 msgid ""
 "As morning dawned over the day after next, they found Relana already waiting "
 "for them."
-msgstr ""
+msgstr "在第三天的清晨，他们发现雷拉纳早就在等待他们了。"
 
 #. [side]: type=Highwayman_Peasant, id=Relana
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:49
 msgid "Relana"
-msgstr "雷亚纳"
+msgstr "雷拉纳"
 
 #. [side]: type=Orcish Warrior, id=Urk Delek
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:78
@@ -680,12 +670,12 @@ msgstr "梯斯忒斯"
 #. [objective]: condition=win
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:134
 msgid "Defeat both enemy leaders"
-msgstr "击败两位敌人首领"
+msgstr "击败两名敌方首领"
 
 #. [objective]: condition=lose
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:146
 msgid "Death of Relana"
-msgstr "雷亚纳死亡"
+msgstr "雷拉纳死亡"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:180
@@ -694,21 +684,17 @@ msgid ""
 "In your many years as Delwyn’s magistrate I have never known your judgment "
 "to err."
 msgstr ""
-"雷亚纳，感谢你接待我们的信使并会见我们。你做德尔文治安官这么多年，我从未听说"
+"雷拉纳，感谢你接待我们的信使并会见我们。你做德尔文治安官这么多年，我从未听说"
 "你的判决有过失误。"
 
 #. [message]: speaker=Relana
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:184
-#, fuzzy
-#| msgid ""
-#| "It has been a long time, old friend. Your news worries us. Yet, there is "
-#| "no problem we have not worked out here at our secret meeting place."
 msgid ""
 "It has been a long time, old friend. Your news worries us. Yet, there is no "
 "problem we have not worked out together."
 msgstr ""
-"那有段时间了，老伙计。你的消息使我烦恼。不用说，这里还不能作为我们秘密会谈的"
-"地点。"
+"好久不见了，老伙计。你的消息让我很担心。不过，我俩合力，还从没遇到过解决不了"
+"的问题呢。"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:188
@@ -717,8 +703,8 @@ msgid ""
 "leader was no man I had ever seen in Annuvin province before. Never has one "
 "been sent out here as a patrol captain who was so ruthless and cruel."
 msgstr ""
-"你不明白。我们攻击了韦诺军队的巡逻队。不止那些，而且领队我在安努文省以前从没"
-"见过。以前从没见过像这么冷酷无情巡逻长官。"
+"你不明白。我们攻击了韦诺军的巡逻队。不但如此，他们的领队是个我以前在安努文省"
+"从没见过的人。以前派来此地的巡逻队长，没有一个这样冷酷无情的。"
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:192
@@ -726,8 +712,8 @@ msgid ""
 "Had they taken my uncle, they would have surely shown up in Delwyn today "
 "with the same ultimatum. As it is, several riders escaped."
 msgstr ""
-"他们已经带走了我的叔叔，他们今天肯定要来德尔文带来同样的最后通牒。因为，有几"
-"个骑手溜了。"
+"要是他们带走了我的叔叔，他们今天肯定会来德尔文，发出同样的最后通牒。就算是现"
+"在这样，也有几个骑手溜了。"
 
 #. [message]: speaker=Relana
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:196
@@ -768,25 +754,21 @@ msgstr ""
 msgid ""
 "We need evidence. Hard evidence... but wait— Are those orcish war drums I "
 "hear?"
-msgstr "我们需要证据。铁证……但等等——我是不是听到兽人的战鼓？"
+msgstr "我们需要证据。铁证……但等等——我是不是听到了兽人的战鼓？"
 
 #. [message]: speaker=Relana
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:220
-#, fuzzy
-#| msgid ""
-#| "I think they are, old friend. And that rank smell on the wind tells "
-#| "another tale; saurians approach. To arms!"
 msgid ""
 "I think they are, old friend. And that rank smell on the wind tells another "
 "tale: saurians approach. To arms!"
 msgstr ""
-"我想是的，老伙计。而且风中的恶臭传达着另一个信息；蜥蜴人接近了。拿起武器！"
+"我想是的，老伙计。而且风中的恶臭传达了另一个信息；蜥蜴人接近了。拿起武器！"
 
 #. [message]: speaker=Urk Delek
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:228
 msgid ""
 "By the sound of the wolves, the scent trail of Fal Khag’s killers ends here."
-msgstr "根据狼的叫声，杀死法尔·卡格凶手的踪迹到这里结束了。"
+msgstr "按狼的叫声来看，杀死法尔·卡格的凶手的踪迹到这里结束了。"
 
 #. [message]: speaker=Thhsthss
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:234
@@ -836,8 +818,8 @@ msgid ""
 "Elensefar and return with help before the Wesnoth army destroys our homes. "
 "Retreat!"
 msgstr ""
-"我们逗留在这里太久了……在韦诺军毁掉我们家园前我们没法到达埃仁撒伐带回援助了。"
-"撤退！！"
+"我们在这里逗留太久了……在韦诺军毁掉我们的家园之前，我们没法到达埃仁撒伐带回援"
+"军了。撤退！"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:286
@@ -847,7 +829,7 @@ msgid ""
 "fates. It was a bitter doom, and as Wesnoth descended into darkness they "
 "would live to see worse."
 msgstr ""
-"巴尔德拉斯和雷亚纳回到了他们的村子，却发现成了废墟，抗争的都死了，仅有的幸存"
+"巴尔德拉斯和雷拉纳回到了他们的村子，却发现成了废墟，抗争的都死了，仅有的幸存"
 "者背井离乡寻找未知的命运。这是个痛苦的结局，韦诺堕入了黑暗他们还会看到更糟。"
 
 #. [scenario]: id=04_Unlawful_Orders
@@ -1363,19 +1345,13 @@ msgstr ""
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:253
-#, fuzzy
-#| msgid ""
-#| "Carcyn is always foggy as of late because these woods have recently "
-#| "become home to a lich and two of its underling necromancers. Our "
-#| "experiments may have actually aroused it from sleep... We’re not exactly "
-#| "sure."
 msgid ""
 "Carcyn is always foggy as of late because these woods have recently become "
 "home to a lich and two of its underling necromancers. Our experiments may "
 "have actually aroused it from sleep... We’re not sure."
 msgstr ""
-"卡辛最近经常有雾是因为一位巫妖和它的两位死灵法师手下刚刚把这个森林当了家。我"
-"们的实验最近可能把它从沉睡中唤醒了……我们也不太肯定。"
+"卡辛近来总是浓雾笼罩，那是因为最近有一名巫妖和它的两位死灵法师手下在森林里住"
+"下了。我们的实验可能把它从沉睡中唤醒了……我们也不太肯定。"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:257
@@ -1647,7 +1623,7 @@ msgid ""
 "named Relana opposed them with a small militia. She was victorious."
 msgstr ""
 "巴尔德拉斯长老，我带来了北方的消息。在上周，一些巡逻队再次冒险穿过泰河进入安"
-"努文。一个叫雷亚纳的女人率少量的民兵抵抗他们。她获得了胜利。"
+"努文。一个叫雷拉纳的女人率少量的民兵抵抗他们。她获得了胜利。"
 
 #. [message]: speaker=Majel
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:181
@@ -1793,8 +1769,8 @@ msgid ""
 "as well as in name."
 msgstr ""
 "韦诺大军，由大法师高级长老会亲自带领，扫荡平原上所有各种敌对生物，野兽、兽"
-"人、精灵。埃仁撒伐城邦正式并入王国的一部分，并且殖民快速扩展。韦诺王国就如同"
-"它的名字一样深深刻入人心。"
+"人、精灵。埃仁撒伐城邦正式并入王国的一部分，并且殖民快速扩展。韦诺王国的伟业"
+"就如同它的名字一样深深刻入人心。"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:27
@@ -1804,8 +1780,9 @@ msgid ""
 "to which human magic had grown over the years by drawing the monument "
 "directly from the earth’s living rock."
 msgstr ""
-"一个成就纪念物被树立在郊外的中心。在周纪仪式里，高级长老会把纪念物直接从陆地"
-"的原生岩石中拉出来，证明了人类的魔法水平在这些年已经增长了。"
+"在荒野的正中心，这一伟业的纪念碑树立起来。高级长老会让纪念碑直接从陆地的原生"
+"岩石中拔地而起，在长达十二年的仪式中展示了人类的魔法水平在这些年中所增长到的"
+"高度。"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:31
@@ -1815,18 +1792,11 @@ msgid ""
 "labored there, building the most formidable fortress ever conceived. It "
 "became the Stronghold of Halstead."
 msgstr ""
-"数百尺高，这座山耸立在平原上，它峻峭的墙壁即鼓舞人心又令人恐惧。所有的郊外的"
-"人都在那里劳动，建造被认为是最坚固的堡垒。这就是霍尔斯特德要塞。"
+"这座山有数百尺高，它耸立在平原上，它峻峭的墙壁即鼓舞人心又令人恐惧。所有的郊"
+"外的人都在那里劳动，建造被认为是最坚固的堡垒。这就是霍尔斯特德要塞。"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:35
-#, fuzzy
-#| msgid ""
-#| "This sentinel of the western plains stood watch as Wesnoth prospered for "
-#| "many centuries under the protection it provided. No war has overcome it, "
-#| "and its walls have never been overrun. The blood of invaders stains its "
-#| "parapets and the bones of the defeated crumble at the base of Halstead’s "
-#| "frozen waves of stone."
 msgid ""
 "This sentinel of the western plains stood watch as Wesnoth prospered for "
 "many centuries under its protection. No war has overcome it, and its walls "
@@ -1834,9 +1804,9 @@ msgid ""
 "bones of the defeated crumble at the base of Halstead’s frozen waves of "
 "stone."
 msgstr ""
-"被视为韦诺繁荣的象征，西部平原的哨卫在它提供的保护下矗立了几百年。没一次战争"
-"攻克过它，它的城墙从没被占领过。侵略者的血涂着它的扶手，战败者的骨头碎在霍尔"
-"斯特德无情墙头的地基上。"
+"这一西部平原的哨卫坚守岗位，而韦诺在它提供的保护下繁荣了很多世纪。没有一次战"
+"争攻克过它，也没有谁跨越过它的城墙。侵略者的血涂满它的扶手，而战败者的骨头碎"
+"在霍尔斯特德干冻石流的地基之上。"
 
 #. [side]: type=General, id=Dommel
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:60
@@ -1946,18 +1916,13 @@ msgstr "你怎么知道的？"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:402
-#, fuzzy
-#| msgid ""
-#| "When I was a boy, my father — your grandfather — brought your dad and me "
-#| "to live in Aldril after orcs massacred many in our village. We grew up "
-#| "around here, and we learned many things."
 msgid ""
 "When I was a boy, my father — your grandfather — brought your mother and me "
 "to live in Aldril after orcs massacred many in our village. We grew up "
 "around here, and we learned many things."
 msgstr ""
 "当我还是个孩子时，在兽人屠杀了我们村子里许多人后，我的父亲——你的祖父——带你的"
-"父亲和我去艾迪尔生活。我们在这里附近长大的，并且我们知道了许多事。"
+"父亲和我去艾迪尔生活。我们是在这附近长大的，而我们也学到了许多。"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:406
@@ -2238,21 +2203,15 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/09_Epilogue.cfg:20
-#, fuzzy
-#| msgid ""
-#| "The Elense riders routed the orcish army, small as it was, and sent them "
-#| "back across the Great River. They then scattered to the countryside and "
-#| "were not heard from again. Baldras thought this odd behavior when he "
-#| "heard about it."
 msgid ""
 "The Elense riders routed the orcish army, small as it was, and sent them "
 "back across the Great River. They then scattered to the countryside and were "
 "not heard from again. Baldras thought this behavior odd when he heard about "
 "it."
 msgstr ""
-"埃仁斯的骑兵们击溃了兽人部队，尽管是支小部队，并送他们穿过泰河回去。他们然后"
-"消失在郊野并再也没听说过他们了。当巴尔德拉斯听到这个时认为这是真是古怪的行"
-"为。"
+"埃仁斯的骑兵们击溃了兽人军队，尽管是支小部队，并把他们逼退回泰河对岸。而后，"
+"他们在郊野之中四散，再也没人听到过他们的消息。巴尔德拉斯听说这事时，认为这真"
+"是古怪的行为。"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/09_Epilogue.cfg:23
@@ -2324,7 +2283,7 @@ msgid ""
 "just keep going. See you in the Three Sisters, old friend. ― Relana”</i>"
 msgstr ""
 "<b>“如果你想找我，朝西南面走。当你到达陆地的边缘时，继续前进。在三姐妹岛再"
-"会，老朋友。——雷亚纳”</b>"
+"会，老朋友。——雷拉纳”</b>"
 
 #. [unit_type]: id=Bone Knight, race=undead
 #: data/campaigns/Liberty/units/Bone_Knight.cfg:5
@@ -2371,14 +2330,6 @@ msgstr "流浪法师"
 
 #. [unit_type]: id=Rogue Mage, race=human
 #: data/campaigns/Liberty/units/Rogue_Mage.cfg:17
-#, fuzzy
-#| msgid ""
-#| "Some mages are thrown out of the mage’s guild for attempting to practice "
-#| "forbidden arts. Now completely outside the law, these rogue mages do "
-#| "whatever necessary to support their study of black magic. Although not as "
-#| "skilled as mages with more formal training, their magic can be quite "
-#| "lethal, while their banditry has resulted in moderate skill with the "
-#| "short sword."
 msgid ""
 "Some mages are thrown out of the mages’ guild for attempting to practice "
 "forbidden arts. Now completely outside the law, these rogue mages do "
@@ -2386,10 +2337,10 @@ msgid ""
 "skilled as mages with more formal training, their magic can be quite lethal, "
 "while their banditry has resulted in moderate skill with the short sword."
 msgstr ""
-"一些法师由于尝试练习禁止的法术被法师协会驱逐。现在完全处于法律之外，这些流浪"
-"法师做些必要的事以支持他们的黑暗魔法的研究。虽然不如那些有更多正式训练的法师"
-"那么熟练，但他们的魔法也相当致命，而且他们的盗匪行径的结果是拥有适当的短剑技"
-"能。"
+"一些法师由于尝试练习禁止的法术被法师行会驱逐。这些叛出的法师现在完全处于法律"
+"之外，他们为了支撑对黑魔法的研习，无所不为。虽然不如那些接受更正式训练的法师"
+"那么熟练，但他们的魔法也可以相当致命。而他们的盗匪行为的结果是，他们使用短剑"
+"的技能还算可以。"
 
 #. [attack]: type=cold
 #: data/campaigns/Liberty/units/Rogue_Mage.cfg:33
