--- a/po/wesnoth-dm/zh_CN.po
+++ b/po/wesnoth-dm/zh_CN.po
@@ -1,5 +1,5 @@
 # The Battle for Wesnoth - Simplified Chinese Translations
-# Copyright (C) 2005-2018 Wesnoth development team
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # Dugucloud <dugucloud@qq.com>, 2011.
 # wind <everywherewind@gmail.com>, 2012.
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 18:29 UTC\n"
-"PO-Revision-Date: 2018-07-08 20:30+0800\n"
+"PO-Revision-Date: 2019-02-07 14:39+0800\n"
 "Last-Translator: CloudiDust <cloudidust@gmail.com>\n"
 "Language-Team: Wesnoth Simplified Chinese Team\n"
 "Language: zh_CN\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
-"X-Generator: Poedit 2.0.8\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:22
@@ -3368,7 +3368,7 @@ msgstr "为国王而战！"
 #. [message]: speaker=Zorlan
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:457
 msgid "Argh! It can't be, beaten by these swine!"
-msgstr ""
+msgstr "啊！不可能，我怎么会被这些贱种打败！"
 
 #. [scenario]: id=16_Dark_Sky_Over_Weldyn
 #: data/campaigns/Delfadors_Memoirs/scenarios/16_Dark_Sky_Over_Weldyn.cfg:3
@@ -4870,7 +4870,7 @@ msgstr "伊利阿-玛拉尔"
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/utils/deaths.cfg:13
 msgid "No! There is still more that I must do!"
-msgstr ""
+msgstr "不！我还有更多的事必须去做！"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/utils/deaths.cfg:27
@@ -4971,9 +4971,3 @@ msgstr "德罗尼"
 #: data/campaigns/Delfadors_Memoirs/utils/sides.cfg:276
 msgid "Artor"
 msgstr "阿托"
-
-#~ msgid "No! So young..."
-#~ msgstr "不行！我死得太早了……"
-
-#~ msgid "Tan-Garthak"
-#~ msgstr "坦-加特克"
